Alterando texto do botão principal

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
     </header>
 
     <section class="hero">
+        <a href="#contato" class="btn-hero">Agendar Avaliação</a>
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Sua beleza, nossa ciência.</h1>
             <p>Tratamentos estéticos personalizados para realçar o que você tem de melhor.</p>
-            <a href="#contato" class="btn-hero">Agendar Avaliação</a>
+            <a href="#contato" class="btn-hero">Agendar Avaliação Agora 📲</a>
         </div>
     </section>
 
@@ -241,7 +242,7 @@
         <div class="container">
             <div style="margin-bottom: 20px;">
                 <span style="background: #fff; color: #2E7D32; padding: 5px 15px; border-radius: 4px; font-weight: bold; border: 2px solid #2E7D32;">
-                    Compromisso 💚 ODS 3: Saúde e Bem-Estar
+                    Compromisso: Saúde e Bem-Estar ❤️
                 </span>
             </div>
             <p>&copy; 2026 Elizabeth Cruz Estética Avançada. Todos os direitos reservados.</p>
