--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#D4AF37">
+    <link rel="apple-touch-icon" href="img/icon-192.png">
 </head>
 <body>
 
@@ -312,6 +316,16 @@
         </div>
     </footer>
 
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./service-worker.js')
+            .then((reg) => console.log('App registrado com sucesso!', reg.scope))
+            .catch((err) => console.log('Falha ao registrar App:', err));
+        });
+      }
+    </script>
+
     <script src="script.js"></script>
 
         <div id="modal-procedimento" class="modal-overlay">
@@ -325,6 +339,18 @@
             <a href="#contato" class="btn-hero" onclick="fecharModal()">Quero Agendar Este</a>
         </div>
     </div>
+
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./service-worker.js')
+            .then((reg) => console.log('App registrado com sucesso!', reg.scope))
+            .catch((err) => console.log('Falha ao registrar App:', err));
+        });
+      }
+    </script>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
