--- a/frontend/index.html
+++ b/frontend/index.html
@@ -287,8 +287,8 @@
                 
                 <form class="contact-form" id="form-agendamento">
                     <input type="text" id="nome" placeholder="Seu Nome" required>
-                    <input type="email" id="email" placeholder="Seu E-mail" required>
-                    <input type="tel" id="telefone" placeholder="Seu Telefone">
+                    <input type="email" id="email" placeholder="Seu E-mail (ex: nome@email.com)" required>
+                    <input type="tel" id="telefone" placeholder="Seu Telefone (WhatsApp)" required>
                     
                     <select id="queixa" style="width: 100%; padding: 15px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 5px; color: #555;">
                         <option value="" disabled selected>Qual seu principal objetivo?</option>
