--- a/frontend/index.html
+++ b/frontend/index.html
@@ -288,6 +288,9 @@
                 <form class="contact-form" id="form-agendamento">
                     <input type="text" id="nome" placeholder="Seu Nome" required>
                     <input type="email" id="email" placeholder="Seu E-mail (ex: nome@email.com)" required>
+                    <input type="text" id="cpf" placeholder="Seu CPF (000.000.000-00)" required 
+                           maxlength="14" oninput="mascaraCPF(this)" 
+                           style="width: 100%; padding: 15px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 5px;">
                     <input type="tel" id="telefone" placeholder="Seu Telefone (WhatsApp)" required>
                     
                     <select id="queixa" style="width: 100%; padding: 15px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 5px; color: #555;">
